@@ -21,6 +21,6 @@
   <symbol type="manual" cname="GdkEventSetting" name="Gdk.EventSetting"/>
   <symbol type="manual" cname="GdkEventVisibility" name="Gdk.EventVisibility"/>
   <symbol type="manual" cname="GdkEventWindowState" name="Gdk.EventWindowState"/>
-  <symbol type="simple" cname="GdkKey" name="Gdk.Key"/>
+  <symbol type="simple" cname="GdkKey" name="Gdk.Key" default_value="Gdk.Key.VoidSymbol"/>
 </api>
 
