@@ -1,3 +1,11 @@
+2007-09-21  Mike Kestner  <mkestner@novell.com>
+
+	* generator/*.cs: add DefaultValue prop for obtaining a
+	sane value when we need to return a value but something bad has 
+	happened such that we can't get a real value.  Needed for iface
+	signal marshaling, among other places we're partially working 
+	around it now.
+
 2007-09-19  Mike Kestner  <mkestner@novell.com>
 
 	* generator/InterfaceGen.cs: remove some dead code from a previous
